<?xml version="1.0"?>
<package format="2">
  <name>robot305_kinematics_dynamics</name>
  <version>0.2.1</version>
  <description>
    The robot305_kinematics_dynamics package
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay Song</author>
  <maintainer email="geyimin55@gmail.com">Mahoro</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>eigen</depend>
</package>
