<?xml version="1.0"?>
<package format="2">
  <name>robot305_localization</name>
  <version>0.2.1</version>
  <description>
    The robot305_localization package
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="geyimin55@gmail.com">Mahoro</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>eigen_conversions</depend>
  <depend>robotis_math</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
</package>
