<?xml version="1.0"?>
<package format="2">
  <name>robot305_read_write_demo</name>
  <version>0.0.1</version>
  <description>
    The robot305_read_write_demo package
  </description>
  
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <maintainer email="geyimin55@gmail.com">mahoro</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <exec_depend>robot305_manager</exec_depend>

</package>
