<?xml version="1.0"?>
<package format="2">
  <name>robotis_op3_msgs</name>
  <version>0.1.1</version>
  <description>
    ROS messages packages for the ROBOTIS OP3 (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/robotis_op3_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/op3/robotis_ros_packages/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3-Msgs/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>op3_action_module_msgs</exec_depend>
  <exec_depend>op3_offset_tuner_msgs</exec_depend>
  <exec_depend>op3_online_walking_module_msgs</exec_depend>
  <exec_depend>op3_walking_module_msgs</exec_depend>
  <export><metapackage/></export>
</package>
